# fastapi-ecommerce-api

./: .gitignore  LICENSE  main.py  pyproject.toml
app/core/: config.py  database.py
app/models/: __init__.py  cart.py  order.py  payment.py  product.py  shipping.py  users.py
app/repositories/: cart.py  order.py  payment.py  product.py  shipping.py  user.py
app/schemas/: cart.py  order.py  payment.py  product.py  shipping.py  user.py  users.py
tests/: test_db.py  test_product.py
